tests/expectations/compiler/statements/compare_diff_types_fail.out
Error [ETYC0372119]: Received different types `i8` and `u8` for the operation `==`.
    --> compiler-test:4:23
     |
   4 |         let b: bool = a == 1u8;
     |                       ^^^^^^^^
     |
     = Make both operands the same type.
Error [ETYC0372119]: Received different types `i8` and `u8` for the operation `!=`.
    --> compiler-test:5:23
     |
   5 |         let c: bool = a != 1u8;
     |                       ^^^^^^^^
     |
     = Make both operands the same type.
Error [ETYC0372119]: Received different types `i8` and `u8` for the operation `>`.
    --> compiler-test:6:23
     |
   6 |         let d: bool = a > 1u8;
     |                       ^^^^^^^
     |
     = Make both operands the same type.
Error [ETYC0372119]: Received different types `i8` and `u8` for the operation `<`.
    --> compiler-test:7:23
     |
   7 |         let e: bool = a < 1u8;
     |                       ^^^^^^^
     |
     = Make both operands the same type.
Error [ETYC0372119]: Received different types `i8` and `u8` for the operation `>=`.
    --> compiler-test:8:23
     |
   8 |         let f: bool = a >= 1u8;
     |                       ^^^^^^^^
     |
     = Make both operands the same type.
Error [ETYC0372119]: Received different types `i8` and `u8` for the operation `<=`.
    --> compiler-test:9:23
     |
   9 |         let g: bool = a <= 1u8;
     |                       ^^^^^^^^
     |
     = Make both operands the same type.
Error [ETYC0372117]: Expected type `u32` but type `i8` was found.
    --> compiler-test:10:22
     |
  10 |         let h: u32 = a * 1u8;
     |                      ^
Error [ETYC0372117]: Expected type `u32` but type `u8` was found.
    --> compiler-test:10:26
     |
  10 |         let h: u32 = a * 1u8;
     |                          ^^^
Error [ETYC0372120]: Received types `i8` and `u8` for the operation `*`.
    --> compiler-test:10:22
     |
  10 |         let h: u32 = a * 1u8;
     |                      ^^^^^^^
     |
     = Valid operands are two integers of the same type, two fields, or a scalar and a group.
Error [ETYC0372083]: A program must have at least one transition function.
    --> compiler-test:2:9
     |
   2 | program test.aleo {
     |         ^^^^^^^^^
